<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="307dp"
                android:layout_height="259dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regg"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/holo_blue_light"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColorHint="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:backgroundTint="@android:color/holo_blue_light"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zareg"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button_background"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vhodd"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>